# greasy_x

./: AGENTS.md  CHANGELOG.md  FORK.md  LICENSE  PIPELINE.md  README.md  RECIPE-RUNBOOK.md  SHALLOW-MANIFEST.md  TODO.md  pyproject.toml
.aux/plans/: THREE-PRS.md
.codebase-pass/: 01-explore-map.md  02-onboarding.md  03-architecture.md  04-repo-health.md  05-wiki-qa.md  06-design.md  06-iteration-loop.md  06-plan.md  06-spec.md  06-vision.md  README.md
docs/: STAGE_FIELD_MAP.md  UPSTREAM-EASY-EXPORTER-README.md
docs/prs/: PR-01-sample-n.md  PR-02-validate-only.md  PR-03-stage-jsonl-v1.md
specs/: 00-validate-backend-json.md  06-stage-jsonl.md  07-distillation.md  08-mediation-scoring.md  10-vault-hydrate.md
src/greasy_x/: __init__.py  __main__.py  cli.py  exporter.py  stage_jsonl.py
tests/: test_sample.py  test_sample_and_validate.py  test_stage_jsonl.py
tests/fixtures/: mini-backend.json
